ingress/phpmyadmin-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: phpmyadmin.REPLACE_BY_YOUR_TRAINING_FQDN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phpmyadmin
            port:
              number: 80
